syntax = "proto3";

package io.restorecommerce.tax_type;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

/*
* Microservice definition.
*/
service Service {
  option (io.restorecommerce.options.service_name) = "tax_type";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (TaxTypeListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (TaxTypeList) returns (TaxTypeListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (TaxTypeList) returns (TaxTypeListResponse);
  rpc Upsert (TaxTypeList) returns (TaxTypeListResponse);
}

enum Behavior {
  NONE = 0;
  ADDITIVE_ON_GROSS = 1;
}

message Deleted {
  string id = 1;
}

message TaxTypeList {
  repeated TaxType items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message TaxTypeListResponse {
  repeated TaxTypeResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message TaxTypeResponse {
  TaxType payload = 1;
  io.restorecommerce.status.Status status = 3;
}

message TaxType {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string type = 3;
  string description = 4;
  Behavior behavior = 5;
}
